# management_aios

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: README.md  config.py  database.py  main.py  models.py  requirements.txt  schemas.py
context/: README.md  confidentiality-rules.md  hr-operations-context.md  kpi-axiom-context.md  management-action-records-context.md  management-aios-purpose.md  organization-structure.md  recruitment-context.md  verify-register.md
database/: member_leave_records_schema.sql  member_schedule_events_schema.sql
decisions/: README.md
docs/: 2026-07-16_management-calendar-leave-copy-requirement.md  management-calendar-leave-copy-design.md  member-dashboard-schedule-api-plan-2026-07-09.md
evidence/: README.md  source-register.md
handover/: 2026-06-23-closure.md  2026-06-30__member-aios-3-draft-workbench-closure.md  2026-06-30__web-view-dashboard-closure.md  2026-07-14__member-workbench-file-details-removal-closure.md  2026-07-14__neon-credential-tracking-remediation-closure.md  2026-07-14__schedule-classification-previous-day-cutoff-closure.md  2026-07-14__schedule-duration-reporting-closure.md  2026-07-14__schedule-summary-full-width-closure.md  2026-07-14__schedule-summary-percentage-row-removal-closure.md  2026-07-14__schedule-summary-responsive-layout-closure.md  2026-07-14__schedule-summary-surface-and-label-closure.md  2026-07-14__schedule-task-classification-closure.md  2026-07-14__shared-calendar-phase-1-layout-shell-closure.md  2026-07-14__shared-calendar-view-rendering-regression-closure.md  2026-07-16__calendar-form-section-order-closure.md  2026-07-16__calendar-selected-date-form-sync-closure.md  2026-07-16__leave-calendar-label-wording-closure.md  2026-07-16__leave-coordination-ui-polish-closure.md  2026-07-16__leave-status-workflow-removal-closure.md  2026-07-16__management-calendar-leave-copy-implementation-closure.md  2026-07-16__management-calendar-leave-copy-requirement-closure.md  2026-07-16__schedule-item-title-limit-120-closure.md  2026-07-17__collapsed-sidebar-alignment-closure.md  2026-07-17__collapsed-sidebar-workspace-width-and-toggle-alignment-closure.md  2026-07-17__google-calendar-style-ui-ux-closure.md  2026-07-17__header-safe-scroll-search-sidebar-ux-closure.md  2026-07-17__member-leave-overlap-prevention-closure.md  2026-07-17__month-task-list-navigation-and-form-order-closure.md  2026-07-17__professional-dashboard-ui-ux-closure.md  2026-07-17__schedule-summary-count-duration-percentage-closure.md  2026-07-17__sidebar-navigation-and-frontend-modularization-closure.md  (+40 more)
intelligence-inbox/: README.md
(+420 files in other folders)
