[project]
name = "management-aios-member-schedule-backend"
version = "0.1.0"
requires-python = ">=3.12"
# 2026-07-10 production crash (validation/member-schedule-vercel-function-crash-check-2026-07-10.md):
# ModuleNotFoundError: No module named 'fastapi' at backend/main.py line 9.
# The entrypoint (backend.main:app) was found and invoked correctly — only
# dependency installation failed. This file previously declared no
# [project.dependencies], on the theory that root requirements.txt
# (-r backend/requirements.txt) was the single source of truth; the crash
# proves Vercel's build did not actually install from that reference.
# Declaring dependencies here directly (mirrored from backend/requirements.txt,
# which remains the source to keep both in sync) is the minimal fix. Root
# requirements.txt is left in place for local `pip install -r requirements.txt`
# parity and as a second path to the same packages.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[tool.vercel]
# backend/main.py is not auto-discovered by Vercel's default entrypoint
# filenames (app.py/index.py/server.py/main.py/wsgi.py/asgi.py) because it
# lives under backend/, not the project root or one of src/, app/, api/.
# This explicitly points Vercel at the FastAPI instance already used locally
# (`python -m uvicorn backend.main:app`), so the entrypoint is identical
# between local dev and Vercel.
entrypoint = "backend.main:app"
